# CS202_CrossyRoad

./: .gitignore  CMakeLists.txt  README.md
data/: HighScore1PEasy.txt  HighScore2PMedi.txt
header/: CommandQueue.hpp  Configs.hpp  Game.hpp  GlobalVar.hpp
header/GUI/: Button.hpp  Carousel.hpp  Component.hpp  Container.hpp
header/Menu/: Element.hpp  HighScore.hpp  Instruction.hpp  MainScreen.hpp  Menu.hpp  NewGame.hpp  Setting.hpp
header/Resources/: Gif.hpp  GifHolder.hpp  MusicPlayer.hpp  MusicPlayer.inl  ResourceHolder.hpp  ResourceHolder.inl
header/SceneGraph/: Character.hpp  SceneNode.hpp  SpriteNode.hpp  TextNode.hpp
header/SceneGraph/Road/: BigCarRoad.hpp  Block.hpp  CarRoad.hpp  Grass.hpp  RailWay.hpp  River.hpp  RiverArea.hpp  Road.hpp  RoadSequence.hpp  SmallCarRoad.hpp  TruckRoad.hpp  Vehicle.hpp  VehicleLane.hpp  Wood.hpp
header/State/: EndState.hpp  HighscoreState.hpp  MenuState.hpp  PauseState.hpp  SettingState.hpp  StateStack.hpp
header/State/GameState/: GameState.hpp  Player.hpp  World.hpp
source/: CommandQueue.cpp  Configs.cpp  Game.cpp  GlobalVar.cpp  main.cpp
source/GUIComponent/: Button.cpp  Carousel.cpp  Component.cpp  Container.cpp
source/Menu/: Element.cpp  HighScore.cpp  Instruction.cpp  MainScreen.cpp  Menu.cpp  NewGame.cpp  Setting.cpp
source/Resources/: Gif.cpp  GifHolder.cpp
source/SceneGraph/: Character.cpp  SceneNode.cpp  SpriteNode.cpp  TextNode.cpp
source/SceneGraph/Road/: BigCarRoad.cpp  Block.cpp  CarRoad.cpp  Grass.cpp  River.cpp  RiverArea.cpp  RoadSequence.cpp  Vehicle.cpp  VehicleLane.cpp  Wood.cpp
source/State/: EndState.cpp  MenuState.cpp  PauseState.cpp  StateStack.cpp
source/State/GameState/: GameState.cpp  Player.cpp  World.cpp
